--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,12 @@ code {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "Circe-Regular";
+    src: url("./assets/fonts/Circe-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
+}
