--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,10 @@
     font-weight: normal;
     font-style: normal;
   }
+  @font-face {
+    font-family: "Circe-ExtraBold";
+    src: url("./app/fonts/Circe-ExtraBold.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
 }
